# sonar-dummy-python-oss

./: .cirrus.yml  pyproject.toml
